objects/Call_Report_Lead__c.object
<CustomObject>
    <description>This object tracks the Lead associated to Call Plan/Call Report</description>
    <fields>
        <fullName>Call_Plan_Call_Report__c</fullName>
        <label>Call Plan / Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipName>Leads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Report_Lead_Status__c</fullName>
        <label>Call Report / Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested This Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Target_List__r.Lead_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_AH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(CreatedBy.Area_Name__c, &quot;ผู้บริหารธุรกิจ คป.1-&quot;, &quot;ME เขต &quot;) ,&quot;เขตธุรกิจลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_NH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( CreatedBy.Network_Name__c , &quot;เครือข่ายลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;เครือข่ายลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;),&quot;ตะวันออกเฉียงเหนือ&quot;,&quot;อีสาน&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Team__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(CreatedBy.Team_Name__c, &quot;ทีมลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;ทีมลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Target_List__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsInterested__c</fullName>
        <formula>IF(TEXT(Call_Plan_Call_Report__r.Offer_Interest__c) =&quot;Interest and can apply&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsInterested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsNotInterested__c</fullName>
        <formula>IF(TEXT(Call_Plan_Call_Report__r.Offer_Interest__c) =&quot;Interest and can apply&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNotInterested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Target_List__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Target_List__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target List</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Target_List__c.Lead_Campaign__r.Status</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Target_List__c.Lead_Campaign__r.Sub_Type__c</field>
                <operation>notEqual</operation>
                <value>Value Chain</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Target_List__c</referenceTo>
        <relationshipLabel>Call Reports / Leads</relationshipLabel>
        <relationshipName>Associated_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Target_List__r.Lead_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Call Report / Lead</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Reports / Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>